--- a/style.css
+++ b/style.css
@@ -46,3 +46,26 @@ margin-top: 20px;
     text-align: center;
     font-size: 12px;
 }
+
+.swal2-title {
+    position: relative;
+    max-width: 100%;
+    margin: 0;
+    padding: 0.8em 1em 0;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    text-transform: none;
+    word-wrap: break-word;
+}
+
+.swal2-styled.swal2-confirm {
+    border: 0;
+    border-radius: 0;
+    background: initial;
+    background-color:rgb(206, 42, 42);
+    color: #fff;
+    font-size: 1em;
+    border-radius: 10px;
+}
