--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body{
     padding-left: 15px;
     padding-right: 15px;
     font-family: 'Mountains of Christmas';
-    font-size: 45px;
-    margin-top: 45px;
+    font-size: 80px;
+    margin-top: 80px;
 }
 
 .aperte{
@@ -29,22 +29,12 @@ body{
 }
 
 .botao{
-text-align-last: center;
-margin-top: 20px;
+    text-align-last: center;
+    margin-top: 20px;
 }
 
 .aperte:focus{
     background-color: rgb(197, 45, 45);
-}
-
-.rodape{
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    padding: 2px;
-    background-color: rgb(141, 11, 11);
-    margin-top: 483px;
-    text-align: center;
-    font-size: 12px;
 }
 
 .swal2-title {
@@ -66,6 +56,20 @@ margin-top: 20px;
     background: initial;
     background-color:rgb(206, 42, 42);
     color: #fff;
-    font-size: 1em;
+    font-size: 14px;
     border-radius: 10px;
+    width: 100px;
+    height: 30px;
+    padding: 2px;
+}
+
+
+
+.rodape{
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 9px;
+    background-color: rgb(22, 83, 78,0.4);
+    margin-top:380px;
+    text-align: center;
+    font-size: 12px;
 }
