--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body{
     background-image: url(bg.png);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position-y: 40%;
     color:white;
 }
 
@@ -66,10 +65,12 @@ body{
 
 
 .rodape{
+    width: 100%;
+    margin-top: 68em;
+    float: left;
+    clear:both;
     font-family: Arial, Helvetica, sans-serif;
     padding: 9px;
-    background-color: rgb(22, 83, 78,0.4);
-    margin-top:380px;
     text-align: center;
     font-size: 12px;
 }
