--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
-body{
+html, body {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     background-image: url(bg.png);
-    background-size: cover;
     background-repeat: no-repeat;
-    color:white;
+    background-position:top;
+    background-size: cover;
+    color: white;
+
 }
 
 .titulo{
@@ -10,7 +16,7 @@ body{
     padding-left: 15px;
     padding-right: 15px;
     font-family: 'Mountains of Christmas';
-    font-size: 80px;
+    font-size: 30px;
     margin-top: 80px;
 }
 
@@ -65,12 +71,11 @@ body{
 
 
 .rodape{
+    position: absolute;
+    top: 99%;
     width: 100%;
-    margin-top: 68em;
-    float: left;
-    clear:both;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 9px;
+    padding: 10px;
     text-align: center;
     font-size: 12px;
 }
