--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html, body {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
     display: flex;
     flex-direction: column;
     background-image: url(bg.png);
@@ -16,7 +16,7 @@ html, body {
     padding-left: 15px;
     padding-right: 15px;
     font-family: 'Mountains of Christmas';
-    font-size: 30px;
+    font-size: 40px;
     margin-top: 80px;
 }
 
