--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 html, body {
     width: auto;
-    height: auto;
+    height: 100%;
     display: flex;
     flex-direction: column;
     background-image: url(bg.png);
     background-repeat: no-repeat;
-    background-position:top;
     background-size: cover;
     color: white;
 
@@ -71,7 +70,6 @@ html, body {
 
 
 .rodape{
-    position: absolute;
     top: 100%;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
